# Transparent-Coherent-PMD

./: .gitignore  .gitmodules  README.md  analysis_config.yml  analyze_IterativeVQA.py  analyze_confidences.py  analyze_confidences_IterativeVQA.py  annotate_informativeness.py  annotate_relevance.py  annotate_vqg_icl_examples.ipynb  annotation_app.py  config.yml  config_sample.yml  data_visualization.ipynb  dataset_prototyping.ipynb  empirical_experiments.ipynb  example_vqg_prompt.txt  experiments_script_debugging.ipynb  from_clip_to_misalignsrl_samples.ipynb  generate_fho_index_files.ipynb  graph_classification_curves.py  graph_det_curves.py  misalignsrl_dataset_deliverable.ipynb  model_prototyping.ipynb  prepare_great_lakes.sh  prepare_great_lakes__itamar.sh  pyproject.toml  requirements.txt  run_generate_captaincook4d.py  run_generate_ego4d.py  run_generate_epickitchens.py  run_gpt_successvqa.py  run_ppo_example.py  run_rlaif4vqg_data_generation.py  run_rlaif4vqg_train.py  run_rlaif4vqg_vqa.py  run_simple_baselines.py  run_successvqa.py  run_vqa_from_vqg.py  run_vqa_iterative.py  (+28 more)
.devcontainer/: devcontainer.json
annotation_files/informativeness_20240812175355/: informativeness_sample888.json  informativeness_sample888_annotator1.txt  informativeness_sample888_annotator2.txt  informativeness_sample888_annotator3.txt  informativeness_sample888_annotator4.txt  informativeness_sample888_annotator5.txt
annotation_files/informativeness_20240813103421/: informativeness_sample888.json  informativeness_sample888_annotator1.txt  informativeness_sample888_annotator2.txt  informativeness_sample888_annotator3.txt  informativeness_sample888_annotator4.txt  informativeness_sample888_annotator5.txt
annotation_files/informativeness_20240816091735/: informativeness_sample888.json  informativeness_sample888_annotator2.txt  informativeness_sample888_annotator4.txt
annotation_files/informativeness_20240816092312/: informativeness_sample888.json  informativeness_sample888_annotator1.txt  informativeness_sample888_annotator3.txt  informativeness_sample888_annotator5.txt
annotation_files/informativeness_20240816103737/: informativeness_sample888.json  informativeness_sample888_annotator1.txt  informativeness_sample888_annotator3.txt  informativeness_sample888_annotator5.txt
annotation_files/informativeness_20240816115506/: informativeness_sample888.json  (+1 more)
ego4d_splits/: fho_main_test.json  fho_main_train.json  fho_main_val.json
notebooks/: annotate_vqg_icl_examples.ipynb  coherence_metrics_human_studies.ipynb  generate_metric_annotation_files.ipynb  generate_overview_graphs.ipynb  human_accuracy_qualtrics_forms.ipynb  stopping_criteria_hyperparameter_search.ipynb  timing_demo.ipynb  topdown_experiment_hyperparameter_search.ipynb  visualize_data.ipynb  visualize_results.ipynb  visualize_results_IterativeVQA.ipynb
scripts/: run_generate_ego4d.py  run_simple_baselines.py  run_vqa_iterative.py  run_vqa_iterative_GPT.py  run_vqa_iterative_diversity.py  run_vqa_successvqa.py  run_vqa_successvqa_GPT.py  score_icl_examples.py  stopping_criteria_hyperparameter_search.py  submit_dpo_slurm_scripts.py  submit_iterativevqa_slurm_script.py  train_vqa_iterative_dpo.py
travel/: __init__.py  constants.py
(+106 files in other folders)
