[tool.poetry]
name = "travel"
version = "0.1.0"
description = "Development code for Tiered Reasoning for Action-Video Equivalence (TRAVEl) project."
authors = ["shanestorks <shanestorks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"
pytorchvideo = "^0.1.5"
torchvision = "^0.14"
transformers = "^4.28.1"
ipywidgets = "^8.1.1"
accelerate = "^0.26.1"
bitsandbytes = "^0.42.0"
torch = "1.13"
peft = "^0.7.1"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
