[tool.poetry]
name = "travel"
version = "0.1.0"
description = "Development code for Tiered Reasoning for Action-Video Equivalence (TRAVEl) project."
authors = ["shanestorks <shanestorks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"
pytorchvideo = "^0.1.5"
torchvision = "^0.14"
transformers = "4.39.1"
ipywidgets = "^8.1.1"
accelerate = "^0.26.1"
bitsandbytes = "^0.42.0"
torch = "1.13"
peft = "^0.7.1"
opencv-python = "^4.9.0.80"
einops = "^0.7.0"
decord = "^0.6.0"
sentencepiece = "^0.1.99"
spacy = "3.7.2"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
scikit-learn = "^1.4.0"
dataclasses-json = "^0.6.3"
trl = "^0.7.10"
datasets = "^2.17.1"
protobuf = "^5.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
