[tool.poetry]
name = "travel"
version = "0.1.0"
description = "Development code for Tiered Reasoning for Action-Video Equivalence (TRAVEl) project."
authors = ["shanestorks <shanestorks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"
pytorchvideo = "^0.1.5"
torchvision = "^0.17"
transformers = "4.39.3"
ipywidgets = "^8.1.1"
accelerate = "^0.26.1"
bitsandbytes = "^0.43.0"
torch = "2.2"
peft = "^0.11.0"
opencv-python = "^4.9.0.80"
einops = "^0.7.0"
decord = "^0.6.0"
sentencepiece = "^0.1.99"
spacy = "3.7.2"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
en_core_web_md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1.tar.gz"}
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz"}
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3.tar.gz"}
scikit-learn = "^1.4.0"
dataclasses-json = "^0.6.3"
trl = "0.8.5"
datasets = "2.19.0"
protobuf = "^4.21"
wandb = "^0.17"
pympler = "^1.0.1"
memory-profiler = "^0.61.0"
pynvml = "^11.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
